어드민페이지 추가

--- a/src/main/resources/templates/LOGIN.html
+++ b/src/main/resources/templates/LOGIN.html
@@ -192,7 +192,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
