--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
 	<link rel="stylesheet" href="/css/MEDIA.css">
@@ -23,7 +23,7 @@
 					<div class="head">
 						<div class="head_logo">
 							<a href="/">
-								<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+								<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 							</a>
 						</div>
 
@@ -324,7 +324,7 @@
 					</ul>
 				</div>
 				<div class="foot_logo">
-					<img class="foot_logo" src="image/logo.png" alt="Logo">
+					<img class="foot_logo" src="/image/logo.png" alt="Logo">
 				</div>
 				<div class="foot_cont">
 					<ul>
