--- a/src/main/resources/templates/Q&A.html
+++ b/src/main/resources/templates/Q&A.html
@@ -191,7 +191,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
@@ -525,7 +525,7 @@
 						</ul>
 					</div>
 					<div class="foot_logo">
-						<img class="foot_logo" src="image/Cafe_logo_4.png" alt="Logo">
+						<img class="foot_logo" src="/image/Cafe_logo_4.png" alt="Logo">
 					</div>
 					<div class="foot_cont">
 						<ul>
