--- a/src/main/resources/templates/REGISTER.html
+++ b/src/main/resources/templates/REGISTER.html
@@ -18,7 +18,7 @@
 
             <!-- content-->
             <div id="content">
-                <form action="/signup" method="post">
+                <form action="/signterm" method="post">
                 <!-- ID -->
                 <div>
                     <h3 class="join_title">
