--- a/src/main/resources/templates/information.html
+++ b/src/main/resources/templates/information.html
@@ -21,7 +21,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="main.html">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+						<img src="/image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
@@ -39,7 +39,7 @@
 					<ul>
 						<li>
 							<a href="#">
-								<img src="image/basket.png" class="icon_basket_img_fixed">
+								<img src="/image/basket.png" class="icon_basket_img_fixed">
 							</a>
 						</li>
 					</ul>
@@ -481,7 +481,7 @@ function del_check(){
 					</ul>
 				</div>
 				<div class="foot_logo">
-					<img class="foot_logo" src="image/logo.png" alt="Logo">
+					<img class="foot_logo" src="/image/logo.png" alt="Logo">
 				</div>
 				<div class="foot_cont">
 					<ul>
