--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -27,7 +27,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
@@ -327,7 +327,7 @@
 				</ul>
 			</div>
 			<div class="foot_logo">
-				<img class="foot_logo" src="image/Cafe_logo_4.png" alt="Logo">
+				<img class="foot_logo" src="/image/Cafe_logo_4.png" alt="Logo">
 			</div>
 			<div class="foot_cont">
 				<ul>
