--- a/src/main/resources/templates/MyOrder.html
+++ b/src/main/resources/templates/MyOrder.html
@@ -62,7 +62,7 @@
 						<div class="head">
 							<div class="head_logo">
 								<a href="main.html">
-									<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+									<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 								</a>
 							</div>
 
