--- a/src/main/resources/templates/MyQ&AA.html
+++ b/src/main/resources/templates/MyQ&AA.html
@@ -19,17 +19,20 @@
 		<div class="head_wrap">
 			<div class="head">
 				<div class="head_logo">
-					<a href="main.html">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+					<a href="/">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="head_top_nav">
 					<nav class="head-menu-top-nav">
-						<ul>
-							<li class="top-nav01"><a href="../login/login.html">Sign In</a></li>
-							<li class="top-nav02"><a href="../join_in/register.html">Join Now</a></li>
-							<li class="top-nav03"><a href="../mypage/mypage.html">My Page</a></li>
+						<ul sec:authorize="!isAuthenticated()">
+							<li class="top-nav01"><a href="/signin">Sign In</a></li>
+							<li class="top-nav02"><a href="/signup">Join Now</a></li>
+						</ul>
+						<ul sec:authorize="isAuthenticated()">
+							<li class="top-nav01"><a href="/logout">로그아웃</a></li>
+							<li class="top-nav02"><a href="/mypage">My Page</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -37,156 +40,90 @@
 				<div class="head_top_icon">
 					<ul>
 						<li>
-							<a href="#">
-								<img src="image/basket.png" class="icon_basket_img_fixed">
-							</a>
+							<div class="icon_basket">
+								<a href="/cart/list">
+									<img src="/image/basket.png" class="icon_basket_img_fixed">
+								</a>
+							</div>
 						</li>
 					</ul>
 				</div>
-
-
-				<!-- 햄버거 버튼 -->
-				<li class="ham-btn">
-					<a class="menu-trigger" href="#">
-						<span></span>
-						<span></span>
-						<span></span>
-					</a>
-				</li>
-
-
-				<!-- 햄버거 메뉴 시작 -->
-				<div class="ham-con">
-					<div id="ham-menu-wrap">
-						<div class="ham-menu mt-5">
-							<ul class="ham-top-menu">
-								<li><a href="/html/aboutus.html">ABOUT US<i class="bi bi-caret-down-fill"></i></a>
-									<ul class="ham-sub-menu">
-										<li><a href="../menu/menu(drink).html">MENU</a></li>
-										<li><a href="../store/store.html">STORE</a></li>
-										<li><a href="../partnership/partnership.html">PARTNERSHIP</a></li>
-										<li><a href="../notice,Q&A/notice.html">NEWS</a></li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<script>
-					// 햄버거 버튼 클릭 이벤트 
-					var burger = $('.menu-trigger');
-
-					burger.each(function (index) {
-						var $this = $(this);
-
-						$this.on('click', function (e) {
-							e.preventDefault();
-							$(this).toggleClass('active-' + (index + 1));
-						})
-					});
-
-					var h = 0;
-
-					$(burger).on("click", function () {
-						if (h == 0) {
-							$('.ham-con').animate({
-								right: '0',
-								opacity: 1
-							}, 500);
-							$(this).addClass('active-1');
-							h++;
-						} else if (h == 1) {
-							$('.ham-con').animate({
-								right: '-20%',
-								opacity: 0
-							}, 500);
-							$(this).removeClass('active-1');
-							h--;
-						}
-						$(window).scroll(function () {
-							sct = $(window).scrollTop();
-							if (sct > 30) {
-								$('.ham-con').css({
-									opacity: 0,
-									right: '-20%'
-								}, 500);
-								$(burger).removeClass('active-1');
-								h = 0;
-							}
-						});
-					})
-				</script>
-				<!-- 햄버거 메뉴 끝 -->
 
 				<div class="head_menu_wrap">
 					<div class="head_menu">
 						<ul>
 							<li>
-								<a href="../brand/brand.html" class="pc">ABOUT US</a>
+								<a href="/brand" class="pc">ABOUT US</a>
 								<a class="m head_menu_down">ABOUT US</a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="../brand/brand.html">브랜드</a>
+											<a href="/brand">브랜드</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 
 							<li>
-								<a href="../menu/menu(drink).html" class="pc">MENU</a>
+								<a href="/menu" class="pc">MENU</a>
 								<a class="m head_menu_down">MENU</a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="../menu/menu(drink).html">음료</a>
+											<a href="/menu">음료</a>
 										</li>
 										<li>
-											<br><a href="../menu/menu(food).html">푸드</a>
+											<br><a href="/menu">푸드</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 
 							<li>
-								<a href="../store/store.html" class="pc">STORE</a>
+								<a href="/store" class="pc">STORE</a>
 								<a class="m head_menu_down">STORE</a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="../store/store.html">매장찾기</a>
+											<a href="/store">매장찾기</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 
 							<li>
-								<a href="../partnership/partnership.html" class="pc">PARTNERSHIP</a>
+								<a href="/partnership" class="pc">PARTNERSHIP</a>
 								<a class="m head_menu_down">PARTNERSHIP </a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="../partnership/partnership.html">입점문의</a>
+											<a href="/partnership">입점문의</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 
 							<li>
-								<a href="../notice,Q&A/notice.html" class="pc">NEWS</a>
+								<a href="/board/notice" class="pc">NEWS</a>
 								<a class="m head_menu_down">NEWS</a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="../notice,Q&A/notice.html">공지사항</a>
+											<a href="/board/notice">공지사항</a>
 										</li>
 										<li>
-											<br><a href="../notice,Q&A/Q&A.html">Q&A</a>
+											<br><a href="/board/QnA">Q&A</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 						</ul>
+					</div>
+				</div>
+
+				<div class="mobile_menu_icon_wrap m t">
+					<div class="mobile_menu_icon">
+						<div class="mobile_menu_icon_bar bar_black"></div>
 					</div>
 				</div>
 			</div>
@@ -450,7 +387,7 @@
 					</ul>
 				</div>
 				<div class="foot_logo">
-					<img class="foot_logo" src="image/logo.png" alt="Logo">
+					<img class="foot_logo" src="/image/logo.png" alt="Logo">
 				</div>
 				<div class="foot_cont">
 					<ul>
