--- a/src/main/resources/templates/Q&A_check.html
+++ b/src/main/resources/templates/Q&A_check.html
@@ -192,7 +192,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
