--- a/src/main/resources/templates/Q&A_write.html
+++ b/src/main/resources/templates/Q&A_write.html
@@ -192,7 +192,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
@@ -401,7 +401,7 @@
 									<ul>
 										<li>
 											<div class="foot_logo">
-												<img src="image/logo.png">
+												<img src="/image/logo.png">
 											</div>
 										</li>
 									</ul>
