--- a/src/main/resources/templates/REGISTER_TERMS.html
+++ b/src/main/resources/templates/REGISTER_TERMS.html
@@ -58,7 +58,7 @@
 		<div class="find_mem_wrap asdasdadas"><!-- jsp 수정 : 클래스명 추가 -->
 			<!-- 20160804 수정 -->
 				<div class="find_mem_inner">
-					<form action="" method="post">
+					<form action="/signup" method="post">
 						<fieldset>
 							<legend class="hid">회원가입 이용약관 동의, 수집하는 개인정보의 항목, 개인정보의 수집 및 이용목적, 개인정보의 보유 및 이용기간 및 파기절차, 파기 방법에 관한 폼</legend>
 							
