--- a/src/main/resources/templates/adminOrder.html
+++ b/src/main/resources/templates/adminOrder.html
@@ -3,13 +3,13 @@
 
 
 <head>
-    <title>관리자</title>
-    <link rel="stylesheet" href="media.css">
+    <title>마이페이지</title>
+    <link rel="stylesheet" href="/css/MEDIA.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="/css/information.css">
     <link rel="stylesheet" href="/css/information1.css">
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="/css/information2.css">
     <link rel="stylesheet" href="/css/mypage.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
@@ -245,14 +245,25 @@
                         <!-- s::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
 
                         <article class="ms_user_info_right">
-                            <p class="ms_user_stat"><span>관리자님 안녕하세요!</span><br>
-                            <!-- 20200805 PLCC 추가 -->
-                            <div class="plcc-logo" style="display:none;">
-                                <img src="/common/img/util/plcc-logo.png" alt="Hyundai Card + STARBUCKS">
-                            </div>
-                            <div class="ms_user_stat_btns">
+                            <table>
+                                <tr>
+                                    <th>주문번호</th>
+                                    <th>주문자 ID</th>
+                                    <th>주문 제품</th>
+                                    <th>주문 날짜</th>
+                                    <th>총 가격</th>
+                                </tr>
+                                <tr th:each="order : ${orders}">
+                                    <td th:text="${order.id}">주문번호</td>
+                                    <td th:text="${order.user.id}">주문자 ID</td>
+                                    <td th:text="${order.productNames}">주문 제품</td>
+                                    <td th:text="${#temporals.format(order.orderDate, 'yyyy-MM-dd HH:mm:ss')}">주문 날짜</td>
+                                    <td th:text="${order.totalPrice}">총 가격</td>
+                                </tr>
+                            </table>
 
-                            </div>
+
+                            <p>총 주문 수입: <span th:text="${totaltotalprice}"></span></p>
                         </article>
                         <!-- e::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
                     </section>
