--- a/src/main/resources/templates/adminUser.html
+++ b/src/main/resources/templates/adminUser.html
@@ -3,13 +3,13 @@
 
 
 <head>
-    <title>관리자</title>
-    <link rel="stylesheet" href="media.css">
+    <title>마이페이지</title>
+    <link rel="stylesheet" href="/css/MEDIA.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="/css/information.css">
     <link rel="stylesheet" href="/css/information1.css">
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="/css/information2.css">
     <link rel="stylesheet" href="/css/mypage.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
@@ -245,12 +245,66 @@
                         <!-- s::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
 
                         <article class="ms_user_info_right">
-                            <p class="ms_user_stat"><span>관리자님 안녕하세요!</span><br>
-                            <!-- 20200805 PLCC 추가 -->
-                            <div class="plcc-logo" style="display:none;">
-                                <img src="/common/img/util/plcc-logo.png" alt="Hyundai Card + STARBUCKS">
-                            </div>
-                            <div class="ms_user_stat_btns">
+                            <div class="layout">
+                                <h1>관리자</h1>
+                                <table>
+                                    <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>아이디</th>
+                                        <th>이름</th>
+                                        <th>가입일자</th>
+                                        <th>권한</th>
+                                        <!--          <<th><a th:href="@{/board/write}">글 작성</a>/th>-->
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user : ${userList}" th:if="${user.role}=='ROLE_ADMIN'">
+                                        <td th:text="${user.id}">1</td>
+                                        <td th:text="${user.username}"><a th:href="@{/mypage/update(id=${user.id})}">1</a></td>
+                                        <td th:text="${user.name}">1</td>
+                                        <td th:text="${user.createDate}">1</td>
+                                        <td th:text="${user.role}">1</td>
+                                        <td><a th:href="@{/admin/users/role/down(id=${user.id})}">권한하강</a></td>
+                                        <td><a th:href="@{/mypage/update(id=${user.id})}">정보수정</a></td>
+                                        <td><a th:href="@{/mypage/delete(id=${user.id})}">계정삭제</a></td>
+                                        <!--          <td><img th:src="@{${board.filepath}}" width="50" height="50"></td>-->
+                                        <!--          <td><a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}">제목입니다.</a></td>-->
+                                        <!--          <td><a th:href="@{/board/delete(id=${board.id})}">글삭제</a></td>-->
+                                    </tr>
+                                    </tbody>
+
+                                </table>
+                                <h1>유저</h1>
+
+                                <table>
+                                    <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>아이디</th>
+                                        <th>이름</th>
+                                        <th>가입일자</th>
+                                        <th>권한</th>
+                                        <!--          <<th><a th:href="@{/board/write}">글 작성</a>/th>-->
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user : ${userList}" th:if="${user.role}=='ROLE_USER'">
+                                        <td th:text="${user.id}">1</td>
+                                        <td th:text="${user.username}">1</td>
+                                        <td th:text="${user.name}">1</td>
+                                        <td th:text="${user.createDate}">1</td>
+                                        <td th:text="${user.role}">1</td>
+                                        <td><a th:href="@{/admin/users/role/up(id=${user.id})}">권한상승</a></td>
+                                        <td><a th:href="@{/mypage/update(id=${user.id})}">정보수정</a></td>
+                                        <td><a th:href="@{/mypage/delete(id=${user.id})}">계정삭제</a></td>
+                                        <!--          <td><img th:src="@{${board.filepath}}" width="50" height="50"></td>-->
+                                        <!--          <td><a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}">제목입니다.</a></td>-->
+                                        <!--          <td><a th:href="@{/board/delete(id=${board.id})}">글삭제</a></td>-->
+                                    </tr>
+                                    </tbody>
+                                </table>
+
 
                             </div>
                         </article>
