--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -11,61 +11,61 @@
     <title>장바구니</title>
 </head>
 <body>
-    <section class="cart">
-        <div class="cart__information">      
+<section class="cart">
+    <div class="cart__information">
+    </div>
+    <table class="cart__list">
+        <thead>
+        <tr>
+            <td><input type="checkbox" id="selectAll" onclick="toggleCheckboxes()"></td>
+            <td></td>
+            <td>상품정보</td>
+            <td>수량</td>
+            <td>상품금액</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="item, itemStat : ${cartItems}" class="cart__list__detail">
+            <td style="width: 2%;"><input type="checkbox" name="selectedItems"  class="itemCheckbox" th:attr="data-item-id=${item.id}"></td>
+            <td style="width: 13%;">
+                <img th:src="@{${item.menuImagePath}}" width="50" height="50" class="image" alt="이미지없음">
+            </td>
+            <td style="width: 27%;" th:text="${item.menuName}">
+            </td>
+            <td class="cart__list__option" style="width: 27%;">
+                <span> 1개</span>
+            </td>
+            <td style="width: 15%;"th:text="${item.menuPrice}+'원'"><br>
+            </td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td colspan="3">
+                <button type="button" class="cart__list__optionbtn" id="removeSelectedItems">선택한 메뉴 삭제</button>
+            </td>
+            <td></td>
+            <td></td>
+        </tr>
+        </tfoot>
+    </table>
+    <div class="total">
+        <div class="total_price">
+            <tr>
+                주문금액
+                <span th:text="${totalPrice}+'원'" id="totalPrice"></span>
+            </tr>
         </div>
-        <table class="cart__list">
-                <thead>
-                    <tr>
-                        <td><input type="checkbox" id="selectAll" onclick="toggleCheckboxes()"></td>
-                        <td></td>
-                        <td>상품정보</td>
-                        <td>수량</td>
-                        <td>상품금액</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="item, itemStat : ${cartItems}" class="cart__list__detail">
-                        <td style="width: 2%;"><input type="checkbox" name="selectedItems"  class="itemCheckbox" th:attr="data-item-id=${item.id}"></td>
-                        <td style="width: 13%;">
-                            <img th:src="@{${item.menuImagePath}}" width="50" height="50" class="image" alt="이미지없음">
-                        </td>
-                        <td style="width: 27%;" th:text="${item.menuName}">
-                        </td>
-                        <td class="cart__list__option" style="width: 27%;">
-                            <span> 1개</span>
-                        </td>
-                        <td style="width: 15%;"th:text="${item.menuPrice}+'원'"><br>
-                        </td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="3">
-                            <button type="button" class="cart__list__optionbtn" id="removeSelectedItems">선택한 메뉴 삭제</button>
-                        </td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tfoot>
-        </table>
-        <div class="total">
-        	<div class="total_price">
-                            <tr>
-                                <ul>주문금액</ul>
-                                <li><span th:text="${totalPrice}+'원'" id="totalPrice"></span></li>
-                                </tr>
-                                </div>
-                  </div>
-        <div class="cart__mainbtns">
-<!--            <input type="submit" value="쇼핑 계속하기" class="cart__bigorderbtn left">-->
-<!--            <input type="submit" value="주문하기" class="cart__bigorderbtn right">-->
-            <input type="checkbox" id="useCoupon" name="useCoupon"> 쿠폰 사용하기
-            <button id="checkoutButton">결제하기</button>
-        </div>
-    </section>
-    
-   
+    </div>
+    <div class="cart__mainbtns">
+        <!--            <input type="submit" value="쇼핑 계속하기" class="cart__bigorderbtn left">-->
+        <!--            <input type="submit" value="주문하기" class="cart__bigorderbtn right">-->
+        <input type="checkbox" id="useCoupon" name="useCoupon"> 쿠폰 사용하기
+        <button id="checkoutButton">결제하기</button>
+    </div>
+</section>
+
+
 </body>
 <script>
     // 모두 선택 버튼 토글 함수
@@ -79,21 +79,9 @@
         var selectedItems = [];
         // 선택한 체크박스 아이템을 찾아서 ID를 배열에 추가
         $(".itemCheckbox:checked").each(function() {
-            var index = $(this).closest('tr').index(); // 테이블 행의 인덱스 가져오기
-            selectedItems.push(index);
+            var itemId = $(this).attr("data-item-id"); // 데이터 속성에서 아이템 ID를 가져옵니다.
+            selectedItems.push(itemId);
         });
-
-        selectedItems.sort(function(a, b) {
-            return a - b;
-        });
-        let num = 0;
-
-        $.each(selectedItems, function(index, value) {
-            // 선택한 항목의 인덱스를 기반으로 해당 행을 삭제
-            $("tr:eq(" + (value+1-num) + ")").remove();
-            num ++;
-        });
-
 
         if (selectedItems.length > 0) {
             console.log(selectedItems);
@@ -106,7 +94,7 @@
                 data: JSON.stringify(selectedItems),
                 success: function (data) {
                     // 삭제 성공 시, 선택한 메뉴 항목을 테이블에서 제거
-
+                    $(".itemCheckbox:checked").closest('tr').remove();
                 },
                 error: function (xhr, textStatus, errorThrown) {
                     console.log("에러:", errorThrown);
