--- a/src/main/resources/templates/notice_write_modify.html
+++ b/src/main/resources/templates/notice_write_modify.html
@@ -191,7 +191,7 @@
         <div class="head">
             <div class="head_logo">
                 <a href="/">
-                    <img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+                    <img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
                 </a>
             </div>
 
@@ -402,7 +402,7 @@
                             <ul>
                                 <li>
                                     <div class="foot_logo">
-                                        <img src="image/logo.png">
+                                        <img src="/image/logo.png">
                                     </div>
                                 </li>
                             </ul>
