--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -21,7 +21,7 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+						<img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
