--- a/src/main/resources/templates/partnership.html
+++ b/src/main/resources/templates/partnership.html
@@ -5,8 +5,8 @@
 	<title>Partnership</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" href="partnership.css">
-	<link rel="stylesheet" href="media.css">
+	<link rel="stylesheet" href="/css/partnership.css">
+	<link rel="stylesheet" href="/css/MEDIA.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
 	<link rel="stylesheet"
