--- a/src/main/resources/templates/MENUList.html
+++ b/src/main/resources/templates/MENUList.html
@@ -505,66 +505,38 @@
 			});
 		};
 	</script>
-				<div class="foot_menu_wrap">
-			<div class="foot_menu">
-				<div class="cont_list">
-					<ul>
-						<li>
-							<a class="modal_open modal_open_policy1">
-								<b>이용약관</b>
-							</a>
-						</li>
-						<li>
-							<a class="modal_open modal_open_policy2">
-								<b>개인정보취급방침</b>
-							</a>
-						</li>
-					</ul>
-				</div>
+	<div class="foot_wrap">
+		<div class="foot">
+			<div class="foot_terms">
+				<ul>
+					<li>
+						<a href="/">이용약관</a>
+					</li>
+					<li>
+						|
+					</li>
+					<li>
+						<a href="/">개인정보취급방침</a>
+					</li>
+				</ul>
 			</div>
-		</div>
-		<div class="foot_wrap">
-			<div class="foot">
-				<div class="cont_list cont_list_content">
-					<ul>
-						<li>
-							<div class="cont_text">
-								<div class="cont_list cont_list_m cont_list_m1">
-									<ul>
-										<li>
-											<div class="foot_logo">
-												<img src="/image/logo.png">
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="cont_text foot_info">
-								<div class="cont_list cont_list_small cont_list_width_m">
-									<ul>
-										<li><b>(주)주식회사 부천대학교</b></li>
-										<li>대표자 박찬호</li>
-										<li>TEL : 032-610-3260</li>
-										<li>경기도 부천시 심곡동 신흥로56번길 25</li>
-										<li>개인정보보호 관리책임자 김영서</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-					</ul>
-							</div>
-						</li>
-					</ul>
-				</div>
+			<div class="foot_logo">
+				<img class="foot_logo" src="image/Cafe_logo_4.png" alt="Logo">
+			</div>
+			<div class="foot_cont">
+				<ul>
+					<li><b>(주)주식회사 부천대학교</li></b>
+					<li>경기도 부천시 심곡동 신흥로56번길 25</li>
+					<li>대표자 박찬호</li>
+					<li>E-mail 1111@gmail.com</li>
+					<li>TEL 032-610-3260</li>
+				</ul>
+				<ul class="copyright">
+					<li>Copyright © 2023 CafeDream. All rights reserved.</li>
+				</ul>
 			</div>
 		</div>
 	</div>
-	<a href="javascript:go_top()">
-		<div class="go_top_wrap">
-			<div class="go_top">
-			</div>
-		</div>
-	</a>
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
