--- a/src/main/resources/templates/adminMenu.html
+++ b/src/main/resources/templates/adminMenu.html
@@ -3,13 +3,13 @@
 
 
 <head>
-    <title>마이페이지</title>
-    <link rel="stylesheet" href="/css/MEDIA.css">
+    <title>adminmenu</title>
+    <link rel="stylesheet" href="media.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="/css/information.css">
     <link rel="stylesheet" href="/css/information1.css">
-    <link rel="stylesheet" href="/css/information2.css">
+    <link rel="stylesheet" href="/css/adminmenu.css">
     <link rel="stylesheet" href="/css/mypage.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
@@ -22,7 +22,7 @@
         <div class="head">
             <div class="head_logo">
                 <a href="/">
-                    <img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
+                    <img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
                 </a>
             </div>
 
