--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -62,6 +62,7 @@
         <!--            <input type="submit" value="주문하기" class="cart__bigorderbtn right">-->
         <input type="checkbox" id="useCoupon" name="useCoupon"> 쿠폰 사용하기
         <button id="checkoutButton">결제하기</button>
+        <button id="checkoutButton">계속 쇼핑하기</button>
     </div>
 </section>
 
