--- a/src/main/resources/templates/adminOrder.html
+++ b/src/main/resources/templates/adminOrder.html
@@ -3,14 +3,14 @@
 
 
 <head>
-    <title>마이페이지</title>
+    <title>adminorder</title>
     <link rel="stylesheet" href="/css/MEDIA.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="/css/information.css">
     <link rel="stylesheet" href="/css/information1.css">
-    <link rel="stylesheet" href="/css/information2.css">
-    <link rel="stylesheet" href="/css/mypage.css">
+    <link rel="stylesheet" href="/css/adminorder.css">
+    <link rel="stylesheet" href="/css/adminorder1.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap">
@@ -22,7 +22,7 @@
         <div class="head">
             <div class="head_logo">
                 <a href="/">
-                    <img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
+                    <img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
                 </a>
             </div>
 
@@ -248,17 +248,17 @@
                             <table>
                                 <tr>
                                     <th>주문번호</th>
-                                    <th>주문자 ID</th>
-                                    <th>주문 제품</th>
-                                    <th>주문 날짜</th>
-                                    <th>총 가격</th>
+                                    <th>주문자ID</th>
+                                    <th>주문제품</th>
+                                    <th>주문날짜</th>
+                                    <th>총가격</th>
                                 </tr>
                                 <tr th:each="order : ${orders}">
                                     <td th:text="${order.id}">주문번호</td>
-                                    <td th:text="${order.user.id}">주문자 ID</td>
-                                    <td th:text="${order.productNames}">주문 제품</td>
-                                    <td th:text="${#temporals.format(order.orderDate, 'yyyy-MM-dd HH:mm:ss')}">주문 날짜</td>
-                                    <td th:text="${order.totalPrice}">총 가격</td>
+                                    <td th:text="${order.user.id}">주문자ID</td>
+                                    <td th:text="${order.productNames}">주문제품</td>
+                                    <td th:text="${#temporals.format(order.orderDate, 'yyyy-MM-dd HH:mm:ss')}">주문날짜</td>
+                                    <td th:text="${order.totalPrice}">총가격</td>
                                 </tr>
                             </table>
 
