거의마무리(로그인약관확인할것)

--- a/src/main/resources/templates/MyPagee.html
+++ b/src/main/resources/templates/MyPagee.html
@@ -313,6 +313,7 @@
                         <article class="ms_user_info_right">
                             <p class="ms_user_stat"><span><strong class="userName" th:text="${userInfo.name}">유진<!-- 홍길동 --></strong> 님 안녕하세요!</span><br>
                                 <b <span th:text="${coupon}"></span></p>
+                            <b <span th:text="${stamp}"></span></p>
                             <!-- 20200805 PLCC 추가 -->
                             <div class="plcc-logo" style="display:none;">
                                 <img src="/common/img/util/plcc-logo.png" alt="Hyundai Card + STARBUCKS">
