--- a/src/main/resources/templates/adminMenu.html
+++ b/src/main/resources/templates/adminMenu.html
@@ -241,13 +241,10 @@
 
                 <div class="msr_user_index">
                     <!-- 유저정보 -->
-                    <section class="ms_user_info ms_user_add"><!-- 20200123 class="ms_user_add" 추가 -->
                         <!-- s::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
 
-                        <article class="ms_user_info_right">
                             <div class="layout">
-                                <h1>관리자</h1>
-                                <table>
+                                <table style="border: 1px solid black">
                                     <thead>
                                     <tr>
                                         <th>ID</th>
@@ -272,15 +269,8 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </article>
-                        <!-- e::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
-                    </section>
 
-                    <section class="my_ms_card">
-                        <div class="my_ms_card_inner">
 
-                        </div>
-                    </section>
 
                 </div>
                 <!-- msr 회원 end -->
