--- a/src/main/resources/templates/adminOrder.html
+++ b/src/main/resources/templates/adminOrder.html
@@ -241,11 +241,7 @@
 
                 <div class="msr_user_index">
                     <!-- 유저정보 -->
-                    <section class="ms_user_info ms_user_add"><!-- 20200123 class="ms_user_add" 추가 -->
-                        <!-- s::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
-
-                        <article class="ms_user_info_right">
-                            <table>
+                            <table style="border: 1px solid black">
                                 <tr>
                                     <th>주문번호</th>
                                     <th>주문자ID</th>
@@ -264,15 +260,6 @@
 
 
                             <p>총 주문 수입: <span th:text="${totaltotalprice}"></span></p>
-                        </article>
-                        <!-- e::20200123 페이스북 프로필 기능 삭제 관련 메인 수정 -->
-                    </section>
-
-                    <section class="my_ms_card">
-                        <div class="my_ms_card_inner">
-
-                        </div>
-                    </section>
 
                 </div>
                 <!-- msr 회원 end -->
