--- a/src/main/resources/templates/LOGIN.html
+++ b/src/main/resources/templates/LOGIN.html
@@ -322,7 +322,7 @@
                     <ul class="sign-button-list">
                         <li>
                             <button type="button" class="btm_image" id="img_btn">
-                                <img src="/image/google.png" onclick="location.href='https://www.google.com'" ;>
+                                <img src="image/google.png" onclick="location.href='https://www.google.com'" style="padding:0px 0px 4px;">
                                 <span>구글로 로그인</span></button>
                         </li>
                 </section>
