--- a/src/main/resources/templates/LOGIN.html
+++ b/src/main/resources/templates/LOGIN.html
@@ -4,8 +4,8 @@
   <title>로그인</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" href="login.css">
-  <link rel="stylesheet" href="media.css">
+  <link rel="stylesheet" href="/css/LOGIN.css">
+  <link rel="stylesheet" href="/css/MEDIA.css">
   <link rel="stylesheet" href="NewFile.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
