--- a/src/main/resources/templates/LOGIN.html
+++ b/src/main/resources/templates/LOGIN.html
@@ -28,7 +28,7 @@
       <div class="head">
         <div class="head_logo">
           <a href="main.html">
-            <img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
+            <img src="/image/Cafe_logo_4.png" class="head_logo_img_fixed">
           </a>
         </div>
 
@@ -322,7 +322,7 @@
                     <ul class="sign-button-list">
                         <li>
                             <button type="button" class="btm_image" id="img_btn">
-                                <img src="image/google.png" onclick="location.href='https://www.google.com'" style="padding:0px 0px 4px;">
+                                <img src="/image/google.png" onclick="location.href='https://www.google.com'" style="padding:0px 0px 4px;">
                                 <span>구글로 로그인</span></button>
                         </li>
                 </section>
