--- a/src/main/resources/templates/LOGIN.html
+++ b/src/main/resources/templates/LOGIN.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="/css/LOGIN.css">
   <link rel="stylesheet" href="/css/MEDIA.css">
-  <link rel="stylesheet" href="NewFile.css">
+  <link rel="stylesheet" href="/css/NewFile.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
   <link rel="stylesheet"
@@ -46,7 +46,7 @@
           <ul>
             <li>
               <a href="basket.html">
-                <img src="image/basket.png" class="icon_basket_img_fixed">
+                <img src="/image/basket.png" class="icon_basket_img_fixed">
               </a>
             </li>
           </ul>
@@ -345,7 +345,7 @@
         </ul>
       </div>
       <div class="foot_logo">
-        <img class="foot_logo" src="image/Cafe_logo_4.png" alt="Logo">
+        <img class="foot_logo" src="/image/Cafe_logo_4.png" alt="Logo">
       </div>
       <div class="foot_cont">
         <ul>
