--- a/src/main/resources/templates/MyPagee.html
+++ b/src/main/resources/templates/MyPagee.html
@@ -37,7 +37,7 @@
             <div class="head_top_icon">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="/cart/list">
                             <img src="/image/basket.png" class="icon_basket_img_fixed">
                         </a>
                     </li>
@@ -359,7 +359,7 @@
                 </ul>
             </div>
             <div class="foot_logo">
-                <img class="foot_logo" src="image/logo.png" alt="Logo">
+                <img class="foot_logo" src="/image/logo.png" alt="Logo">
             </div>
             <div class="foot_cont">
                 <ul>
