--- a/src/main/resources/templates/partnershipp.html
+++ b/src/main/resources/templates/partnershipp.html
@@ -190,13 +190,13 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+						<img src="/image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_basket">
 					<a href="#">
-						<img src="image/basket.png" class="icon_basket_img_fixed">
+						<img src="/image/basket.png" class="icon_basket_img_fixed">
 					</a>
 				</div>
 
@@ -316,12 +316,12 @@
          <div id="sub_cont">
             <div class="c4_cont1">
                <div>
-                  <img src="image/입점안내.png" alt="" style="padding-top:50px; padding-bottom:20px; position:relative; left:380px; width:1150px;">
+                  <img src="/image/입점안내.png" alt="" style="padding-top:50px; padding-bottom:20px; position:relative; left:380px; width:1150px;">
                </div>
            </div>
                <div class="c4_cont1_1">
                   <a href="/partnership/write" >
-                  <img src="image/상담접수.png" alt="" style="position:relative;"></a>
+                  <img src="/image/상담접수.png" alt="" style="position:relative;"></a>
                </div>
 		<div class="foot_menu_wrap">
 			<div class="foot_menu">
@@ -351,7 +351,7 @@
 									<ul>
 										<li>
 											<div class="foot_logo">
-												<img src="image/logo.png">
+												<img src="/image/logo.png">
 											</div>
 										</li>
 									</ul>
