--- a/src/main/resources/templates/MyQ&AA.html
+++ b/src/main/resources/templates/MyQ&AA.html
@@ -355,8 +355,8 @@
 			<a href="../mypage/mypage.html">My 쿠폰<span class="sbox_arrow_down"></span></a>
 		</li>
 
-		<li class="msRnb_btn"><a href="../mypage/myorder.html" required="login" data-href="/my/calendar.do">주문내역</a></li>
-		<li class="msRnb_btn"><a href="../mypage/myQ&A.html" required="login" data-href="/my/my_menu.do">문의내역</a></li>
+		<li class="msRnb_btn"><a href="/mypage/order" required="login" data-href="/my/calendar.do">주문내역</a></li>
+		<li class="msRnb_btn"><a href="/mypage/qna" required="login" data-href="/my/my_menu.do">문의내역</a></li>
 
 		<li>
 			<a href="../mypage/information.html">개인정보수정<span class="sbox_arrow_down"></span></a>
