--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -490,7 +490,7 @@
 				</ul>
 			</div>
 			<div class="foot_logo">
-				<img class="foot_logo" src="image/Cafe_logo_4.png" alt="Logo">
+				<img class="foot_logo" src="/image/Cafe_logo_4.png" alt="Logo">
 			</div>
 			<div class="foot_cont">
 				<ul>
